# observatory

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DECISION_LOG.md  IMPLEMENTATION_STATUS.md  Makefile  PROJECT_STATUS.md  README.md  SECURITY.md  SHOWCASE.md  docker-compose.yml
.github/workflows/: ci.yml
ADR/: ADR-001-collector-choice.md  ADR-003-log-labels.md  ADR-009-dashboard-provisioning.md  ADR-010-slo-implementation-and-terraform-timing.md  ADR-011-metrics-source.md
alloy/: config.river
ansible/: README.md  ansible.cfg  inventory.ini  playbook.yml
ansible/group_vars/: all.yml
ansible/templates/: docker-compose.override.yml.j2  env.j2
apps/gateway/: Dockerfile  instrumentation.py  main.py  pyproject.toml
docs/: PORTFOLIO_EVIDENCE.md  deployer-guide.md
grafana/provisioning/dashboards/: dashboards.yml  service-health-red.json  service-health.json  slo-burn-rate.json  system-overview.json
grafana/provisioning/datasources/: datasources.yml
loki/: loki.yml
mimir/: mimir.yml
mimir-rules/tenant-0/: gateway-slo-rules.yaml
scripts/: validate_json.py  validate_trace_log_correlation.py
sloth/: gateway-slo-rules.yaml  gateway-slo.yaml
tempo/: tempo.yml
terraform/: alerts.tf  dashboards.tf  datasources.tf  folders.tf  main.tf  outputs.tf  variables.tf
tools/: fault-injector.py  load-generator.py
